--- a/ToolBox/ToolBox.Desktop/Settings/SettingsView.xaml
+++ b/ToolBox/ToolBox.Desktop/Settings/SettingsView.xaml
@@ -15,59 +15,65 @@
     </ResourceDictionary>
   </UserControl.Resources>
 
-  <Grid Margin="10, 5, 10, 5">
-
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto"/>
-      <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
-
-    <Grid Grid.Row="0">
-
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="Auto"/>
-        <ColumnDefinition Width="*"/>
-      </Grid.ColumnDefinitions>
-
-      <TextBlock Text="Settings" Grid.Column="0" Style="{StaticResource Header_0}" />
-
-      <StackPanel Orientation="Horizontal" Grid.Column="1" VerticalAlignment="Center">
-        <Button Content="Save" Command="{Binding SaveSettingsCommand}" />
-      </StackPanel>
-
-    </Grid>
-    
-    <Grid Grid.Row="1">
-      
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="50*"/>
-        <ColumnDefinition Width="50*"/>
-      </Grid.ColumnDefinitions>
-
-      <Grid Grid.Column="0">
-
-        <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="Auto"/>
-          <ColumnDefinition Width="10"/>
-          <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+  <Grid>
+    <Border Padding="10,5,10,5"
+            Background="{StaticResource GeneralBackgroundBrush}">
+      <Grid>
 
         <Grid.RowDefinitions>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
           <RowDefinition Height="Auto"/>
           <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Tools path" Grid.Column="0" Grid.Row="0" Margin="0,0,0,10"/>
-        <TextBox Text="{Binding Settings.ToolsPath}" Grid.Column="2" Grid.Row="0" VerticalAlignment="Top"/>
+        <Grid Grid.Row="0">
 
-        <TextBlock Text="Remember last opened tool" Grid.Column="0" Grid.Row="1" Margin="0,0,0,10"/>
-        <CheckBox IsChecked="{Binding Settings.RememberLastTool}" Grid.Column="2" Grid.Row="1" VerticalAlignment="Top"/>
+          <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+          </Grid.ColumnDefinitions>
+
+          <TextBlock Text="Settings" Grid.Column="0" Style="{StaticResource Header_0}" />
+
+          <StackPanel Orientation="Horizontal" Grid.Column="1" VerticalAlignment="Center">
+            <Button Content="Save" Command="{Binding SaveSettingsCommand}" />
+          </StackPanel>
+
+        </Grid>
+
+        <Grid Grid.Row="1">
+
+          <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
+          </Grid.ColumnDefinitions>
+
+          <Grid Grid.Column="0">
+
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="Auto"/>
+              <ColumnDefinition Width="10"/>
+              <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+              <RowDefinition Height="Auto"/>
+              <RowDefinition Height="Auto"/>
+              <RowDefinition Height="Auto"/>
+              <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="Tools path" Grid.Column="0" Grid.Row="0" Margin="0,0,0,10"/>
+            <TextBox Text="{Binding ToolsPath}" Grid.Column="2" Grid.Row="0" VerticalAlignment="Top"/>
+
+            <TextBlock Text="Remember last opened tool" Grid.Column="0" Grid.Row="1" Margin="0,0,0,10"/>
+            <CheckBox IsChecked="{Binding RememberLastTool}" Grid.Column="2" Grid.Row="1" VerticalAlignment="Top"/>
+
+          </Grid>
+
+        </Grid>
 
       </Grid>
-      
-    </Grid>
-
+    </Border>
   </Grid>
+
 </UserControl>
