--- a/ToolBox/ToolBox.Desktop/Styles/MainStyles.xaml
+++ b/ToolBox/ToolBox.Desktop/Styles/MainStyles.xaml
@@ -7,6 +7,9 @@
     <ResourceDictionary Source="CheckBoxStyle.xaml"/>
     <ResourceDictionary Source="ComboBoxStyle.xaml"/>
     <ResourceDictionary Source="TextBoxStyle.xaml"/>
+    <ResourceDictionary Source="ListViewStyle.xaml"/>
+    <ResourceDictionary Source="ListViewItemStyle.xaml"/>
+    <ResourceDictionary Source="ScrollBarStyle.xaml"/>
   </ResourceDictionary.MergedDictionaries>
 
   <!-- Window -->
@@ -32,13 +35,15 @@
   <Style TargetType="{x:Type ToggleButton}">
     <Setter Property="MinHeight" Value="20"/>
     <Setter Property="MinWidth" Value="75"/>
+    <Setter Property="Padding" Value="10,1,10,3"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="ToggleButton">
           <Border Background="{TemplateBinding Background}"
                   BorderBrush="{TemplateBinding BorderBrush}"
                   BorderThickness="{TemplateBinding BorderThickness}"
-                  Padding="10,1,10,3">
+                  Padding="{TemplateBinding Padding}"
+                  CornerRadius="2">
             <ContentPresenter Focusable="False"
                               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
@@ -72,8 +77,11 @@
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type Button}">
-          <Border Background="{TemplateBinding Background}" BorderThickness="1" BorderBrush="{TemplateBinding BorderBrush}"
-                  Padding="{TemplateBinding Padding}">
+          <Border Background="{TemplateBinding Background}"
+                  BorderThickness="1"
+                  BorderBrush="{TemplateBinding BorderBrush}"
+                  Padding="{TemplateBinding Padding}"
+                  CornerRadius="2">
             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
           </Border>
         </ControlTemplate>
