--- a/ToolBox/MinionCopy.Desktop/CopyDirectoryStrategyView.xaml
+++ b/ToolBox/MinionCopy.Desktop/CopyDirectoryStrategyView.xaml
@@ -63,7 +63,13 @@
       <ToggleButton x:Name="OptionsButton" Grid.Column="4"
                     Content="..."
                     MinWidth="10" HorizontalAlignment="Center"/>
-      <Button Content="X" Command="{Binding RequestRemoveCommand}" MinWidth="16" HorizontalAlignment="Right" Grid.Column="5"/>
+      <Button Command="{Binding RequestRemoveCommand}" MinWidth="16" HorizontalAlignment="Right" Grid.Column="5">
+        <Button.Content>
+          <Path StrokeThickness="2"
+                Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}"
+                Data="M 0 0 L 8 8 M 8 0 L 0 8"/>
+        </Button.Content>
+      </Button>
     </Grid>
     <!-- Options -->
     <Border Grid.Row="2"
