--- a/ToolBox/MinionCopy.Desktop/MinionCopy.xaml
+++ b/ToolBox/MinionCopy.Desktop/MinionCopy.xaml
@@ -41,6 +41,8 @@
       <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="*"/>
+        <RowDefinition Height="2"/>
+        <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
       <Button Content="TA-DAA!" Margin="0,10,0,20" Grid.Row="0"
               HorizontalAlignment="Stretch" Height="30"
@@ -51,6 +53,23 @@
         <ContentPresenter Content="{Binding CopyFromListStrategyViewModel}"
                           Margin="0,0,10,0"/>
       </ScrollViewer>
+      <GridSplitter Grid.Row="2"
+                    HorizontalAlignment="Stretch"/>
+      <Grid Grid.Row="3">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal"
+                    Grid.Row="0"
+                    Margin="0,5,0,5">
+          <ToggleButton>
+            <TextBlock Text="{Binding CopyExceptions.Count, StringFormat=Errors ({0})}"/>
+          </ToggleButton>
+        </StackPanel>
+        <ListView Grid.Row="1"
+                  ItemsSource="{Binding CopyExceptions}"/>
+      </Grid>
     </Grid>
   </Grid>
 </UserControl>
