Copy exceptions list (#3)
* Copy exceptions list
* Select item when error selected
* Add CopyExceptionView. Edit error messages.

--- a/ToolBox/MinionCopy.Desktop/CopyFromListStrategyView.xaml
+++ b/ToolBox/MinionCopy.Desktop/CopyFromListStrategyView.xaml
@@ -57,7 +57,7 @@
       <StackPanel Grid.Column="0" Orientation="Horizontal">
         <ToggleButton x:Name="ShowListButton"
                       Style="{StaticResource ShowListButton}"
-                      IsChecked="True"
+                      IsChecked="{Binding ShowList}"
                       Margin="0,0,10,0"/>
         <Path Style="{StaticResource CopyResultPathStyle}"
               Margin="0,0,10,0"
@@ -96,7 +96,9 @@
         <ColumnDefinition Width="25"/>
         <ColumnDefinition Width="*"/>
       </Grid.ColumnDefinitions>
-      <ListView ItemsSource="{Binding DisplayItems}" Grid.Column="1"
+      <ListView ItemsSource="{Binding DisplayItems}"
+                SelectedItem="{Binding SelectedItem}"
+                Grid.Column="1"
                 HorizontalContentAlignment="Stretch"/>
     </Grid>
   </Grid>
