--- a/ToolBox/MinionCopy.Desktop/MinionCopy.xaml
+++ b/ToolBox/MinionCopy.Desktop/MinionCopy.xaml
@@ -18,6 +18,9 @@
     <DataTemplate DataType="{x:Type local:CopyFromListStrategyViewModel}">
       <local:CopyFromListStrategyView/>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type local:CopyException}">
+      <local:CopyExceptionView/>
+    </DataTemplate>
   </UserControl.Resources>
   
   <UserControl.DataContext>
@@ -41,6 +44,8 @@
       <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="*"/>
+        <RowDefinition Height="2"/>
+        <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
       <Button Content="TA-DAA!" Margin="0,10,0,20" Grid.Row="0"
               HorizontalAlignment="Stretch" Height="30"
@@ -51,6 +56,24 @@
         <ContentPresenter Content="{Binding CopyFromListStrategyViewModel}"
                           Margin="0,0,10,0"/>
       </ScrollViewer>
+      <GridSplitter Grid.Row="2"
+                    HorizontalAlignment="Stretch"/>
+      <Grid Grid.Row="3">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal"
+                    Grid.Row="0"
+                    Margin="0,5,0,5">
+          <ToggleButton>
+            <TextBlock Text="{Binding CopyExceptions.Count, StringFormat=Errors ({0})}"/>
+          </ToggleButton>
+        </StackPanel>
+        <ListView Grid.Row="1"
+                  ItemsSource="{Binding CopyExceptions}"
+                  SelectedItem="{Binding SelectectedCopyException}"/>
+      </Grid>
     </Grid>
   </Grid>
 </UserControl>
