--- a/ToolBox/MinionCopy.Desktop/MinionCopy.xaml
+++ b/ToolBox/MinionCopy.Desktop/MinionCopy.xaml
@@ -18,6 +18,9 @@
     <DataTemplate DataType="{x:Type local:CopyFromListStrategyViewModel}">
       <local:CopyFromListStrategyView/>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type local:CopyException}">
+      <local:CopyExceptionView/>
+    </DataTemplate>
   </UserControl.Resources>
   
   <UserControl.DataContext>
