--- a/ToolBox/MinionCopy.Desktop/CopyFromListStrategyView.xaml
+++ b/ToolBox/MinionCopy.Desktop/CopyFromListStrategyView.xaml
@@ -64,13 +64,15 @@
               Width="10"
               HorizontalAlignment="Center"
               VerticalAlignment="Center"/>
+        <TextBlock Text="{Binding DisplayItems.Count, StringFormat=({0})}" Margin="0,0,25,0"/>
         <TextBlock Text="{Binding DisplayName}"
                    Visibility="{Binding ElementName=RenameButton, Path=IsChecked, Converter={StaticResource ReverseVisibilityBoolConverter}}"
-                    Margin="0,0,10,0"/>
+                   MinWidth="200"
+                   Margin="0,0,10,0"/>
         <TextBox Text="{Binding DisplayName}"
                  Visibility="{Binding ElementName=RenameButton, Path=IsChecked, Converter={StaticResource VisibilityBoolConverter}}"
-                  Margin="0,0,10,0"/>
-        <TextBlock Text="{Binding DisplayItems.Count, StringFormat=({0})}" Margin="0,0,25,0"/>
+                 MinWidth="200"
+                 Margin="0,0,10,0"/>
         <Button Command="{Binding AddCopyFileStrategyCommand}" Content="+ File"/>
         <Button Command="{Binding AddCopyDirectoryStrategyCommand}" Content="+ Directory"/>
         <Button Command="{Binding AddCopyFromListStrategyCommand}" Content="+ List" Margin="0,0,30,0"/>
