Forrest is there

--- a/ToolBox/RunForrest.Desktop/OutputsView.xaml
+++ b/ToolBox/RunForrest.Desktop/OutputsView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="RunForrestPlugin.OutputsView"
+﻿<UserControl x:Class="RunForrest.Desktop.OutputsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:RunForrestPlugin"
-             xmlns:extensions="clr-namespace:RunForrestPlugin.Extensions"
+             xmlns:local="clr-namespace:RunForrest.Desktop"
+             xmlns:extensions="clr-namespace:RunForrest.Desktop.Extensions"
              mc:Ignorable="d">
 
   <UserControl.Resources>
