--- a/ToolBox/RunForrest.Desktop/Scripts/ScriptsView.xaml
+++ b/ToolBox/RunForrest.Desktop/Scripts/ScriptsView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="RunForrestPlugin.ScriptsView"
+﻿<UserControl x:Class="RunForrest.Desktop.ScriptsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:RunForrestPlugin"
-             xmlns:res="clr-namespace:RunForrestPlugin.Properties"
+             xmlns:local="clr-namespace:RunForrest.Desktop"
+             xmlns:res="clr-namespace:RunForrest.Desktop.Properties"
              mc:Ignorable="d">
 
   <UserControl.Resources>
