--- a/ToolBox/RunForrest.Desktop/Styles.xaml
+++ b/ToolBox/RunForrest.Desktop/Styles.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:RunForrestPlugin">
+                    xmlns:local="clr-namespace:RunForrest.Desktop">
 
   <ResourceDictionary.MergedDictionaries>
     <ResourceDictionary Source="Brushes.xaml" />
