--- a/ToolBox/RunForrest.Desktop/Variables/VariableDataView.xaml
+++ b/ToolBox/RunForrest.Desktop/Variables/VariableDataView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="RunForrestPlugin.VariableDataView"
+﻿<UserControl x:Class="RunForrest.Desktop.VariableDataView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:RunForrestPlugin"
+             xmlns:local="clr-namespace:RunForrest.Desktop"
              mc:Ignorable="d">
   
   <UserControl.Resources>
