--- a/ToolBox/RunForrest.Desktop/RunForrest.xaml
+++ b/ToolBox/RunForrest.Desktop/RunForrest.xaml
@@ -57,54 +57,87 @@
         <local:ControlPanelView />
       </DataTemplate>
 
+      <DataTemplate DataType="{x:Type local:MainMenuViewModel}">
+        <local:MainMenuView />
+      </DataTemplate>
+
     </ResourceDictionary>
   </UserControl.Resources>
 
-  <!-- Plugin Content -->
-  <Grid Background="{StaticResource GeneralBackgroundBrush}">
+  <!-- Content -->
+  <Grid>
 
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="*" />
-    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="25*"/>
+      <ColumnDefinition Width="75*"/>
+    </Grid.ColumnDefinitions>
 
-    <!-- Control Panel -->
-    <ContentControl Grid.Row="0"
+    <!-- Right Side -->
+    <Grid Grid.Column="0">
+
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="*"/>
+      </Grid.RowDefinitions>
+
+      <!-- Main Menu -->
+      <ContentControl Grid.Row="0"
+                      Content="{Binding MainMenuViewModel}" />
+
+      <!-- Scripts List -->
+      <ContentControl Grid.Row="2"
+                      Content="Scripts List" />
+
+    </Grid>
+    
+    <Grid Grid.Column="1">
+
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
+
+      <!-- Control Panel -->
+      <ContentControl Grid.Row="0"
                     Margin="0,5,0,5"
                     Content="{Binding ControlPanel}" />
 
-    <!-- Scripts List & Additional Content Area -->
-    <Grid Grid.Row="1">
-
-      <Grid.ColumnDefinitions>
-
-        <!-- 0: Scripts -->
-        <ColumnDefinition Width="35*" />
-        <!-- 1: Vertical Grid Splitter -->
-        <ColumnDefinition Width="5" />
-        <!-- 2: Additional Content Area -->
-        <ColumnDefinition Width="60*" />
-
-      </Grid.ColumnDefinitions>
-
-      <!-- Scripts View -->
+      <!-- Scripts List & Additional Content Area -->
       <Grid Grid.Row="1">
-        <ContentControl Content="{Binding Scripts}" />
-      </Grid>
 
-      <!-- Grid Splitter -->
-      <GridSplitter Grid.Column="1"
+        <Grid.ColumnDefinitions>
+
+          <!-- 0: Scripts -->
+          <ColumnDefinition Width="35*" />
+          <!-- 1: Vertical Grid Splitter -->
+          <ColumnDefinition Width="5" />
+          <!-- 2: Additional Content Area -->
+          <ColumnDefinition Width="60*" />
+
+        </Grid.ColumnDefinitions>
+
+        <!-- Scripts View -->
+        <Grid Grid.Row="1">
+          <ContentControl Content="{Binding Scripts}" />
+        </Grid>
+
+        <!-- Grid Splitter -->
+        <GridSplitter Grid.Column="1"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Stretch"
                     Width="3"
                     Background="{StaticResource GeneralBackgroundBrush}"/>
 
-      <!-- Additional Content Area -->
-      <ContentControl Grid.Column="2"
+        <!-- Additional Content Area -->
+        <ContentControl Grid.Column="2"
                       Content="{Binding AdditionalContentAreaViewModel}" />
+
+      </Grid>
 
     </Grid>
 
   </Grid>
+  
+  
 
 </UserControl>
