--- a/ToolBox/RunForrest.Desktop/MainMenu/MainMenuView.xaml
+++ b/ToolBox/RunForrest.Desktop/MainMenu/MainMenuView.xaml
@@ -33,7 +33,8 @@
 
       <TextBlock Grid.Column="0"
                  Text="Pinned"
-                 VerticalAlignment="Center"/>
+                 VerticalAlignment="Center"
+                 Margin="0,0,10,0"/>
 
       <ComboBox Grid.Column="1"
                 ItemsSource="{Binding PinnedItems}"
