--- a/ToolBox/ToolBox.Desktop/Styles/ListViewStyle.xaml
+++ b/ToolBox/ToolBox.Desktop/Styles/ListViewStyle.xaml
@@ -149,9 +149,8 @@
   <Style x:Key="{x:Type ListView}" TargetType="ListView">
     <Setter Property="SnapsToDevicePixels" Value="true"/>
     <Setter Property="OverridesDefaultStyle" Value="true"/>
-    <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto"/>
     <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
-    <Setter Property="ScrollViewer.CanContentScroll" Value="true"/>
+    <Setter Property="ScrollViewer.CanContentScroll" Value="False"/>
     <Setter Property="VerticalContentAlignment" Value="Center"/>
     <Setter Property="Template">
       <Setter.Value>
@@ -163,9 +162,6 @@
             </ScrollViewer>
           </Border>
           <ControlTemplate.Triggers>
-            <Trigger Property="IsGrouping" Value="true">
-              <Setter Property="ScrollViewer.CanContentScroll" Value="false"/>
-            </Trigger>
             <Trigger Property="IsEnabled" Value="false">
               <Setter TargetName="Border" Property="Background" Value="{StaticResource DisabledBackgroundBrush}"/>
             </Trigger>
