--- a/ToolBox/RunForrest.Desktop/Scripts/ScriptView.xaml
+++ b/ToolBox/RunForrest.Desktop/Scripts/ScriptView.xaml
@@ -18,7 +18,7 @@
 
       <!--Solo/Mute--> 
       <StackPanel Grid.Column="0"
-                  VerticalAlignment="Center">
+                  VerticalAlignment="Top">
         <ToggleButton Content="S"
                       ToolTip="Solo"
                       MinWidth="5"
