--- a/ToolBox/RunForrest.Desktop/Scripts/ScriptDetailsView.xaml
+++ b/ToolBox/RunForrest.Desktop/Scripts/ScriptDetailsView.xaml
@@ -8,6 +8,14 @@
              d:DesignHeight="200" d:DesignWidth="400">
   <Grid>
     <StackPanel Orientation="Vertical">
+      <Button ToolTip="Close"
+                MinWidth="0"
+                Padding="3,3,3,3"
+                Command="{Binding RequestClosingCommand}">
+        <Path StrokeThickness="2"
+                Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}"
+                Data="M 0 0 L 8 8 M 8 0 L 0 8"/>
+      </Button>
       <TextBox Text="{Binding ScriptText}"/>
     </StackPanel>
   </Grid>
