--- a/ToolBox/RunForrest.Desktop/Scripts/ScriptDetailsView.xaml
+++ b/ToolBox/RunForrest.Desktop/Scripts/ScriptDetailsView.xaml
@@ -4,19 +4,75 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RunForrest.Desktop"
+             xmlns:converter="clr-namespace:ToolBox.Desktop.Base.Converters;assembly=ToolBox.Desktop.Base"
              mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="400">
+             d:DesignHeight="200" d:DesignWidth="600">
+
+  <UserControl.Resources>
+
+    <converter:VisibilityBoolConverter x:Key="VisibilityBoolConverter"/>
+
+  </UserControl.Resources>
+  
   <Grid>
-    <StackPanel Orientation="Vertical">
-      <Button ToolTip="Close"
-                MinWidth="0"
-                Padding="3,3,3,3"
-                Command="{Binding RequestClosingCommand}">
-        <Path StrokeThickness="2"
-                Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}"
-                Data="M 0 0 L 8 8 M 8 0 L 0 8"/>
-      </Button>
-      <TextBox Text="{Binding ScriptText}"/>
-    </StackPanel>
+
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="*"/>
+    </Grid.RowDefinitions>
+
+    <Button Grid.Row="0"
+            Margin="10"
+            ToolTip="Close"
+            MinWidth="0"
+            Padding="3,3,3,3"
+            HorizontalAlignment="Right"
+            Command="{Binding RequestClosingCommand}">
+      <Path StrokeThickness="2"
+            Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}"
+            Data="M 0 0 L 8 8 M 8 0 L 0 8"/>
+    </Button>
+
+    <Border Grid.Row="1"
+            Margin="0,10,0,0">
+
+      <Grid>
+
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="600"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="1"
+                    Orientation="Vertical">
+          <Grid Margin="0,10,0,0">
+            <TextBox x:Name="ScriptTextTextBox"
+                   Text="{Binding ScriptText}"
+                   TextWrapping="Wrap"
+                   FontFamily="Courier New"/>
+            <TextBlock Text="Script"
+                     Visibility="{Binding ElementName=ScriptTextTextBox, Path=Text.IsEmpty, Converter={StaticResource VisibilityBoolConverter}}"
+                     IsHitTestVisible="False"
+                     Opacity="0.4"/>
+          </Grid>
+
+          <Grid Margin="0,10,0,0">
+            <TextBox x:Name="WorkingDirectoryTextBox"
+                   Text="{Binding WorkingDirectory}"
+                   TextWrapping="Wrap"
+                   FontFamily="Courier New"/>
+            <TextBlock Text="Working Directory"
+                     Visibility="{Binding ElementName=ScriptTextTextBox, Path=Text.IsEmpty, Converter={StaticResource VisibilityBoolConverter}}"
+                     IsHitTestVisible="False"
+                     Opacity="0.4"/>
+          </Grid>
+
+        </StackPanel>
+
+      </Grid>
+      
+    </Border>
+    
   </Grid>
 </UserControl>
