--- a/ToolBox/RunForrest.Desktop/Scripts/ScriptDetailsView.xaml
+++ b/ToolBox/RunForrest.Desktop/Scripts/ScriptDetailsView.xaml
@@ -48,24 +48,40 @@
                     Orientation="Vertical">
           <Grid Margin="0,10,0,0">
             <TextBox x:Name="ScriptTextTextBox"
-                   Text="{Binding ScriptText}"
-                   TextWrapping="Wrap"
-                   FontFamily="Courier New"/>
+                     Text="{Binding ScriptText}"
+                     TextWrapping="Wrap"
+                     FontFamily="Courier New"/>
             <TextBlock Text="Script"
-                     Visibility="{Binding ElementName=ScriptTextTextBox, Path=Text.IsEmpty, Converter={StaticResource VisibilityBoolConverter}}"
-                     IsHitTestVisible="False"
-                     Opacity="0.4"/>
+                       Margin="5,0,0,0"
+                       Visibility="{Binding ElementName=ScriptTextTextBox, Path=Text.IsEmpty, Converter={StaticResource VisibilityBoolConverter}}"
+                       IsHitTestVisible="False"
+                       Opacity="0.4"/>
           </Grid>
 
           <Grid Margin="0,10,0,0">
             <TextBox x:Name="WorkingDirectoryTextBox"
-                   Text="{Binding WorkingDirectory}"
-                   TextWrapping="Wrap"
-                   FontFamily="Courier New"/>
+                     Text="{Binding WorkingDirectory}"
+                     TextWrapping="Wrap"
+                     FontFamily="Courier New"/>
             <TextBlock Text="Working Directory"
-                     Visibility="{Binding ElementName=ScriptTextTextBox, Path=Text.IsEmpty, Converter={StaticResource VisibilityBoolConverter}}"
-                     IsHitTestVisible="False"
-                     Opacity="0.4"/>
+                       Margin="5,0,0,0"
+                       Visibility="{Binding ElementName=ScriptTextTextBox, Path=Text.IsEmpty, Converter={StaticResource VisibilityBoolConverter}}"
+                       IsHitTestVisible="False"
+                       Opacity="0.4"/>
+          </Grid>
+
+          <Grid Margin="0,10,0,0">
+            <TextBox x:Name="CommentTextBox"
+                     Text="{Binding Comment}"
+                     TextWrapping="Wrap"
+                     FontFamily="Courier New"
+                     MinLines="3"
+                     AcceptsReturn="True"/>
+            <TextBlock Text="Comment"
+                       Margin="5,0,0,0"
+                       Visibility="{Binding ElementName=CommentTextBox, Path=Text.IsEmpty, Converter={StaticResource VisibilityBoolConverter}}"
+                       IsHitTestVisible="False"
+                       Opacity="0.4"/>
           </Grid>
 
         </StackPanel>
