--- a/ToolBox/RunForrest.Desktop/MainMenu/MainMenuView.xaml
+++ b/ToolBox/RunForrest.Desktop/MainMenu/MainMenuView.xaml
@@ -17,10 +17,12 @@
     <StackPanel Grid.Row="0"
                 Orientation="Horizontal"
                 Margin="0,20,0,10">
-      <Button Content="Open"/>
-      <Button Content="Save"/>
-      <Button Content="Clear"/>
-      <Button Content="Pin"/>
+      <Button Content="Open"
+              Command="{Binding OpenCommand}"/>
+      <Button Content="Save"
+              Command="{Binding SaveCommand}"/>
+      <Button Content="Pin"
+              Command="{Binding PinCommand}"/>
     </StackPanel>
 
     <!-- Pinned Scripts -->
