--- a/ToolBox/RunForrest.Desktop/Scripts/ScriptsListView.xaml
+++ b/ToolBox/RunForrest.Desktop/Scripts/ScriptsListView.xaml
@@ -14,17 +14,29 @@
       <RowDefinition Height="*" />
     </Grid.RowDefinitions>
 
-    <Button Grid.Row="0"
-            Margin="10"
-            MinWidth="0"
-            Padding="3"
-            Command="{Binding AddNewScriptCommand}"
-            ToolTip="Add new script"
-            HorizontalAlignment="Right">
-      <Path StrokeThickness="2"
+    <Grid Grid.Row="0"
+          Margin="10">
+
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="Auto"/>
+      </Grid.ColumnDefinitions>
+
+      <Button Grid.Column="0"
+              Content="Run, Forrest! Run!"/>
+
+      <Button Grid.Column="2"
+              MinWidth="0"
+              Padding="3"
+              Command="{Binding AddNewScriptCommand}"
+              ToolTip="Add new script">
+        <Path StrokeThickness="2"
             Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}"
             Data="M 4 0 L 4 8 M 0 4 L 8 4"/>
-    </Button>
+      </Button>
+
+    </Grid>
 
     <!--Scripts List-->
     <ListView Grid.Row="1"
