--- a/ToolBox/RunForrest.Desktop/RunForrest.xaml
+++ b/ToolBox/RunForrest.Desktop/RunForrest.xaml
@@ -98,13 +98,9 @@
         <RowDefinition Height="*" />
       </Grid.RowDefinitions>
 
-      <Border Grid.Row="0"
-              BorderThickness="0,0,0,2"
-              Padding="0,5,0,5">
-        <StackPanel Orientation="Vertical">
-          <TextBlock Text="{Binding OpenedFilePath, StringFormat=File: {0}}"/>
-        </StackPanel>
-      </Border>
+      <StackPanel Grid.Row="0" Orientation="Vertical">
+        <TextBlock Text="{Binding OpenedFilePath, StringFormat=File: {0}}"/>
+      </StackPanel>
 
       <ContentControl Grid.Row="1"
                       Content="{Binding AdditionalContentAreaViewModel}" />
