--- a/ToolBox/RunForrest.Desktop/OutputsView.xaml
+++ b/ToolBox/RunForrest.Desktop/OutputsView.xaml
@@ -9,23 +9,10 @@
 
   <UserControl.Resources>
     <ResourceDictionary>
-      <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Brushes.xaml"/>
-      </ResourceDictionary.MergedDictionaries>
       
       <!-- Extensions -->
       <extensions:ScrollViewerExtensions x:Key="ScrollViewerExtensions" />
 
-      <Style TargetType="{x:Type ListViewItem}">
-        <Setter Property="Template">
-          <Setter.Value>
-            <ControlTemplate TargetType="{x:Type ListViewItem}">
-              <ContentPresenter />
-            </ControlTemplate>
-          </Setter.Value>
-        </Setter>
-      </Style>
-      
     </ResourceDictionary>
   </UserControl.Resources>
   
@@ -35,7 +22,13 @@
                   VerticalAlignment="Stretch"
                   extensions:ScrollViewerExtensions.AlwaysScrollToEnd="True"
                   VirtualizingPanel.IsVirtualizing="True">
-      <ListView ItemsSource="{Binding Items}">
+      <ListView ItemsSource="{Binding Items}"
+                SelectionMode="Extended">
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <TextBlock Text="{Binding Path=.}"/>
+          </DataTemplate>
+        </ListView.ItemTemplate>
       </ListView>
     </ScrollViewer>
   </Grid>
