--- a/ToolBox/RunForrest.Desktop/RunForrest.xaml
+++ b/ToolBox/RunForrest.Desktop/RunForrest.xaml
@@ -58,6 +58,10 @@
         <local:ScriptDetailsView/>
       </DataTemplate>
 
+      <DataTemplate DataType="{x:Type local:PinnedItemViewModel}">
+        <local:PinnedItemView />
+      </DataTemplate>
+      
       <DataTemplate DataType="{x:Type local:MainMenuViewModel}">
         <local:MainMenuView />
       </DataTemplate>
